--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <img src="./anarcandy/bB.svg">
 <button onclick="changePieceButton()">Change Pieces</button>
 <H1 id="checkmate-id"></H1>
 <table class="chessboard">
