--- a/about-us.html
+++ b/about-us.html
@@ -83,7 +83,7 @@
 
     </div>
     <div class="layout--main">
-    <div class="bg-dark mb-3 py-3"> <div class="display-5 text-light mb-2 text-center">#1 Buy & Sell Chain In The Greater Toronto Area!</div>
+    <div class="bg-dark py-3"> <div class="display-5 text-light mb-2 text-center">#1 Buy & Sell Chain In The Greater Toronto Area!</div>
 </div>
 <section class="bg-dark "> 
   <div class="container"> 
@@ -232,12 +232,11 @@
 
 
         <ul class="nav footer--nav col-xl-7 justify-content-center align-items-center">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">We Buy</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">We Sell</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Consignment</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Social Media</a></li>
+          <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="/we-buy.html" class="nav-link px-2 text-muted">We Buy</a></li>
+          <li class="nav-item"><a href="we-sell.html" class="nav-link px-2 text-muted">We Sell</a></li>
+          <li class="nav-item"><a href="/consignment.html" class="nav-link px-2 text-muted">Consignment</a></li>
+          <li class="nav-item"><a href="/contact.html" class="nav-link px-2 text-muted">Contact</a></li>
         </ul>
 
 
