--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <main>
   <!-- Carousel Hero -->
 
-  <section>
+  <section class="main-hero">
 
     <div id="heroCarousel" class="carousel slide" data-bs-ride="false">
       <div class="carousel-indicators">
@@ -135,7 +135,7 @@
 
 
 
-  <section class="px-3">
+  <section class="px-3 main-boxes">
     <div class="row text-center g-4">
       <div class="col-md">
         <div class="card bg-dark text-light">
@@ -570,12 +570,11 @@
 
 
         <ul class="nav footer--nav col-xl-7 justify-content-center align-items-center">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">We Buy</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">We Sell</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Consignment</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Social Media</a></li>
+          <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="/we-buy.html" class="nav-link px-2 text-muted">We Buy</a></li>
+          <li class="nav-item"><a href="we-sell.html" class="nav-link px-2 text-muted">We Sell</a></li>
+          <li class="nav-item"><a href="/consignment.html" class="nav-link px-2 text-muted">Consignment</a></li>
+          <li class="nav-item"><a href="/contact.html" class="nav-link px-2 text-muted">Contact</a></li>
         </ul>
 
 
