--- a/we-buy.html
+++ b/we-buy.html
@@ -236,12 +236,11 @@ Unlike places that pay you just for scrap, we will pay you more because we retai
 
 
         <ul class="nav footer--nav col-xl-7 justify-content-center align-items-center">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">We Buy</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">We Sell</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Consignment</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Social Media</a></li>
+          <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="/we-buy.html" class="nav-link px-2 text-muted">We Buy</a></li>
+          <li class="nav-item"><a href="we-sell.html" class="nav-link px-2 text-muted">We Sell</a></li>
+          <li class="nav-item"><a href="/consignment.html" class="nav-link px-2 text-muted">Consignment</a></li>
+          <li class="nav-item"><a href="/contact.html" class="nav-link px-2 text-muted">Contact</a></li>
         </ul>
 
 
