--- a/we-sell.html
+++ b/we-sell.html
@@ -203,12 +203,11 @@ Collectibles military equipment, comics, toys, etc.
 
 
         <ul class="nav footer--nav col-xl-7 justify-content-center align-items-center">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">We Buy</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">We Sell</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Consignment</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Social Media</a></li>
+          <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="/we-buy.html" class="nav-link px-2 text-muted">We Buy</a></li>
+          <li class="nav-item"><a href="we-sell.html" class="nav-link px-2 text-muted">We Sell</a></li>
+          <li class="nav-item"><a href="/consignment.html" class="nav-link px-2 text-muted">Consignment</a></li>
+          <li class="nav-item"><a href="/contact.html" class="nav-link px-2 text-muted">Contact</a></li>
         </ul>
 
 
