--- a/contact.html
+++ b/contact.html
@@ -204,7 +204,8 @@ Sunday: 11 am – 5 pm
         <ul class="nav footer--nav col-xl-7 justify-content-center align-items-center">
           <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
           <li class="nav-item"><a href="/we-buy.html" class="nav-link px-2 text-muted">We Buy</a></li>
-          <li class="nav-item"><a href="we-sell.html" class="nav-link px-2 text-muted">We Sell</a></li>
+          <li class="nav-item"><a href="/we-sell.html" class="nav-link px-2 text-muted">We Sell</a></li>
+          <li class="nav-item"><a href="/about-us.html" class="nav-link px-2 text-muted">About Us</a></li>
           <li class="nav-item"><a href="/consignment.html" class="nav-link px-2 text-muted">Consignment</a></li>
           <li class="nav-item"><a href="/contact.html" class="nav-link px-2 text-muted">Contact</a></li>
         </ul>
